[tool.poetry]
name = "boxx-pymonad"
version = "0.2.0"
description = "My Implementation of pymonad package."
authors = ["Will Boxx <wboxx1@gmail.com>"]
license = "MIT license"

readme = "README.rst"

repository = "https://github.com/wboxx1/boxx-pymonad"

homepage = "https://wboxx1.github.io/boxx-pymonad"

packages = [
    { include = "pymonad", from = "src"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
[tool.poetry.dependencies]
# List project dependencies here

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^8.1.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
# coverage = "5.1"
Sphinx = "^1.8.1"
twine = "^1.12.1"

pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
